--- a/index.html
+++ b/index.html
@@ -1,1 +1,86 @@
-<a>(function() {   var ASSET = "https://w7.pngwing.com/pngs/649/920/png-transparent-dvd-logo-dvd-video-compact-disc-icon-dvd-background-text-logo-computer-wallpaper-thumbnail.png";   var WIDTH = 212;   var HEIGHT = 104;   var VERT_DIRECTIONS = ["up", "down"];   var HORI_DIRECTIONS = ["left", "right"];   var SCROLL_AMOUNTS = [6, 8, 11, 15];   var SCROLL_DELAYS = [60, 85, 100, 130];    function _assign(obj, attrs) {     for (var key in attrs) {       obj[key] = attrs[key];     }   }    function _choice(options) {     return options[parseInt(Math.random() * options.length)];   }    function add() {     var outerMarquee = document.createElement("marquee");     _assign(outerMarquee, {       direction: _choice(VERT_DIRECTIONS),       behavior: "alternate",       scrollAmount: _choice(SCROLL_AMOUNTS),       scrollDelay: _choice(SCROLL_DELAYS)     });     _assign(outerMarquee.style, {       position: "fixed",       width: "100%",       height: "100%",       top: 0,       left: 0,       zIndex: 999999,       pointerEvents: "none"     });      var innerMarquee = document.createElement("marquee");     _assign(innerMarquee, {       behavior: "alternate",       direction: _choice(HORI_DIRECTIONS),       scrollAmount: _choice(SCROLL_AMOUNTS),       scrollDelay: _choice(SCROLL_DELAYS)     });     _assign(innerMarquee.style, { width: "100%" });     outerMarquee.appendChild(innerMarquee);      var img = document.createElement("img");     img.src = ASSET;     innerMarquee.appendChild(img);      var body = document.body;     if (body) {       body.appendChild(outerMarquee);     }   }    var original = window.SeaDragon;    var self = (window.SeaDragon = {     add: add,     noConflict: function() {       window.SeaDragon = original;       return self;     }   }); })();</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SeaDragon Marquee</title>
+</head>
+<body>
+  <script>
+    // Global variables
+    var ASSET = "https://w7.pngwing.com/pngs/649/920/png-transparent-dvd-logo-dvd-video-compact-disc-icon-dvd-background-text-logo-computer-wallpaper-thumbnail.png";
+    var WIDTH = 212;
+    var HEIGHT = 104;
+    var VERT_DIRECTIONS = ["up", "down"];
+    var HORI_DIRECTIONS = ["left", "right"];
+    var SCROLL_AMOUNTS = [6, 8, 11, 15];
+    var SCROLL_DELAYS = [60, 85, 100, 130];
+
+    // Helper function to assign attributes to an object
+    function _assign(obj, attrs) {
+      for (var key in attrs) {
+        obj[key] = attrs[key];
+      }
+    }
+
+    // Helper function to choose a random value from an array
+    function _choice(options) {
+      return options[parseInt(Math.random() * options.length)];
+    }
+
+    // Main add function that creates the scrolling marquee and appends it to the body
+    function add() {
+      var outerMarquee = document.createElement("marquee");
+      _assign(outerMarquee, {
+        direction: _choice(VERT_DIRECTIONS),
+        behavior: "alternate",
+        scrollAmount: _choice(SCROLL_AMOUNTS),
+        scrollDelay: _choice(SCROLL_DELAYS)
+      });
+      _assign(outerMarquee.style, {
+        position: "fixed",
+        width: "100%",
+        height: "100%",
+        top: 0,
+        left: 0,
+        zIndex: 999999,
+        pointerEvents: "none"
+      });
+
+      var innerMarquee = document.createElement("marquee");
+      _assign(innerMarquee, {
+        behavior: "alternate",
+        direction: _choice(HORI_DIRECTIONS),
+        scrollAmount: _choice(SCROLL_AMOUNTS),
+        scrollDelay: _choice(SCROLL_DELAYS)
+      });
+      _assign(innerMarquee.style, { width: "100%" });
+      outerMarquee.appendChild(innerMarquee);
+
+      var img = document.createElement("img");
+      img.src = ASSET;
+      innerMarquee.appendChild(img);
+
+      var body = document.body;
+      if (body) {
+        body.appendChild(outerMarquee);
+      }
+    }
+
+    // Storing the original SeaDragon object to allow noConflict method
+    var original = window.SeaDragon;
+
+    // Creating the SeaDragon object with the add function and noConflict method
+    var SeaDragon = {
+      add: add,
+      noConflict: function() {
+        window.SeaDragon = original;
+        return SeaDragon;
+      }
+    };
+
+    // Call the add function to display the marquee (you can remove or modify this line as needed)
+    SeaDragon.add();
+  </script>
+</body>
+</html>
