--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SeaDragon Marquee</title>
+  <style>
+    /* Make sure the background is transparent */
+    body {
+      background-color: transparent;
+      margin: 0;
+      overflow: hidden;
+    }
+  </style>
 </head>
 <body>
   <script>
     // Global variables
-    var ASSET = "https://w7.pngwing.com/pngs/649/920/png-transparent-dvd-logo-dvd-video-compact-disc-icon-dvd-background-text-logo-computer-wallpaper-thumbnail.png";
+    var ASSET = "DVD_logo.svg.png";  // Updated the logo file name
     var WIDTH = 212;
     var HEIGHT = 104;
     var VERT_DIRECTIONS = ["up", "down"];
